--- a/package.json
+++ b/package.json
@@ -6,13 +6,26 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@types/clear": "^0.1.0",
+    "@types/clui": "^0.3.0",
+    "@types/configstore": "^4.0.0",
+    "@types/figlet": "^1.2.0",
     "@types/node": "^13.1.6",
+    "@types/opener": "^1.4.0",
+    "@types/yargs": "^15.0.3",
     "chrono-node": "^1.3.11",
+    "clear": "^0.1.0",
+    "clui": "^0.3.6",
+    "configstore": "^5.0.0",
     "csv-parser": "^2.3.2",
-    "googleapis": "39",
+    "figlet": "^1.2.4",
+    "google-auth-library": "^5.9.2",
+    "googleapis": "47",
+    "opener": "^1.5.1",
     "ora": "^4.0.3",
     "ts-node": "^8.6.1",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "yargs": "^15.1.0"
   },
   "scripts": {
     "start": "ts-node src/main.ts"
