--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "calendar-homework-sync",
+  "name": "csvtasks",
   "version": "1.0.0",
+  "description": "A cli to sync a spreedsheet with google tasks",
   "main": "src/main.ts",
   "author": "Kyle Pfromer",
   "license": "MIT",
-  "private": true,
+  "keywords": [
+    "google",
+    "tasks",
+    "csv",
+    "spreadsheet",
+    "sync",
+    "CLI"
+  ],
   "dependencies": {
     "@types/clear": "^0.1.0",
     "@types/clui": "^0.3.0",
