--- a/package.json
+++ b/package.json
@@ -13,14 +13,10 @@
     "sync",
     "CLI"
   ],
+  "bin": {
+    "csvtasks": "./index.js"
+  },
   "dependencies": {
-    "@types/clear": "^0.1.0",
-    "@types/clui": "^0.3.0",
-    "@types/configstore": "^4.0.0",
-    "@types/figlet": "^1.2.0",
-    "@types/node": "^13.1.6",
-    "@types/opener": "^1.4.0",
-    "@types/yargs": "^15.0.3",
     "chrono-node": "^1.3.11",
     "clear": "^0.1.0",
     "clui": "^0.3.6",
@@ -31,12 +27,23 @@
     "googleapis": "47",
     "opener": "^1.5.1",
     "ora": "^4.0.3",
-    "ts-node": "^8.6.1",
-    "typescript": "^3.7.4",
     "yargs": "^15.1.0"
   },
   "scripts": {
-    "start": "ts-node src/main.ts"
+    "start": "ts-node src/main.ts",
+    "build": "gulp"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/clear": "^0.1.0",
+    "@types/clui": "^0.3.0",
+    "@types/configstore": "^4.0.0",
+    "@types/figlet": "^1.2.0",
+    "@types/node": "^13.1.6",
+    "@types/opener": "^1.4.0",
+    "@types/yargs": "^15.0.3",
+    "gulp": "^4.0.2",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "ts-node": "^8.6.1",
+    "typescript": "^3.7.4"
+  }
 }
