--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "csvtasks",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A cli to sync a spreedsheet with google tasks",
-  "main": "src/main.ts",
+  "main": "lib/main.js",
   "author": "Kyle Pfromer",
   "license": "MIT",
   "keywords": [
@@ -14,7 +14,7 @@
     "CLI"
   ],
   "bin": {
-    "csvtasks": "./index.js"
+    "csvtasks": "./lib/main.js"
   },
   "dependencies": {
     "chrono-node": "^1.3.11",
@@ -31,7 +31,9 @@
   },
   "scripts": {
     "start": "ts-node src/main.ts",
-    "build": "gulp"
+    "build": "gulp",
+    "lint": "eslint src/**/* --fix",
+    "format": "prettier --write **/**.{ts,js,md,json}"
   },
   "devDependencies": {
     "@types/clear": "^0.1.0",
@@ -41,8 +43,16 @@
     "@types/node": "^13.1.6",
     "@types/opener": "^1.4.0",
     "@types/yargs": "^15.0.3",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "husky": "^4.2.1",
+    "lint-staged": "^10.0.7",
+    "prettier": "^1.19.1",
     "ts-node": "^8.6.1",
     "typescript": "^3.7.4"
   }
