--- a/.github/workflows/npm-package.yml
+++ b/.github/workflows/npm-package.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ["10", "8"]
+        node: ["10"]
     # This job runs on Linux
     steps:
       - uses: actions/checkout@v2
