--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1",
     "semantic-release": "^17.0.4",
     "ts-node": "^8.6.1",
     "typescript": "^3.7.4"
@@ -78,7 +77,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged",
+      "pre-commit": "lint-staged",
       "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
