--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "build": "gulp",
     "lint": "eslint src/**/* --fix",
     "format": "prettier --write **/**.{ts,js,md,json}",
-    "semantic-release": "semantic-release"
+    "commit": "git cz"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
@@ -78,7 +78,6 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   }
