--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,9 @@
 {
-  "extends": [
-    "config:base"
-  ]
+  "extends": ["config:base"],
+  "assignees": ["@kpfromer"],
+  "automerge": true,
+  "major": {
+    "automerge": false
+  },
+  "semanticCommits": true
 }
