feat: add dryrun, dont create items for completed tasks

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,10 +8,6 @@
   "parserOptions": { "ecmaVersion": 2018, "sourceType": "module" },
   "ignorePatterns": ["gulpfile.js"],
   "rules": {
-    "camelcase": "off",
-    "@typescript-eslint/camelcase": [
-      "error",
-      { "allow": ["tasks_v1", "access_type", "login_hint"] }
-    ]
+    "camelcase": ["error", { "allow": ["tasks_v1", "access_type", "login_hint"] }]
   }
 }
