--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "start": "ts-node src/main.ts",
     "test": "echo 'No tests yet'",
-    "build": "gulp",
+    "build": "tsc",
     "lint": "eslint src/**/* --fix",
     "format": "prettier --write **/**.{ts,js,md,json}",
     "commit": "git cz"
@@ -61,8 +61,6 @@
     "eslint": "7.7.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
-    "gulp": "4.0.2",
-    "gulp-typescript": "6.0.0-alpha.1",
     "husky": "4.2.5",
     "lint-staged": "10.2.13",
     "prettier": "2.1.0",
